[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[tool.isort]
line_length = 100

[project]
name = "resonate"
version = "1.0.0"
authors = [{ name = "Xiquan Li", email = "mtxiaoxi55@sjtu.edu.cn" }]
description = "Resonate is strong text-to-audio generator trained with online reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'torch >= 2.5.1',
  'huggingface_hub >= 0.26',
  'cython >= 3.0',
  'gitpython >= 3.1',
  'tensorboard >= 2.11',
  'numpy >= 1.24, <2.1',
  'Pillow >= 10.0',
  'opencv-python >= 4.8',
  'scipy >= 1.11',
  'tqdm >= 4.66.1',
  'gradio >= 4.0',
  'einops >= 0.7',
  'hydra-core >= 1.3.2',
  'requests >= 2.31',
  'torchdiffeq >= 0.2.5',
  'librosa >= 0.10',
  'nitrous-ema',
  'hydra_colorlog >= 1.2',
  'tensordict >= 0.6.1',
  'colorlog >= 6.7',
  'open_clip_torch >= 2.29.0',
  'av >= 14.0.1',
  'timm >= 1.0.12',
  'python-dotenv >= 1.0',
  'transformers >= 4.46',
  'debugpy >= 1.8',
  'peft >= 0.14',
  'diffusers >= 0.31',
  'accelerate >= 1.0',
  'qwen_omni_utils >= 0.0.2',
  'audiobox_aesthetics >= 0.0.1',
  'msclap >= 1.3.3',
  'matplotlib >= 3.8',
  'wandb >= 0.18'
]

[tool.hatch.build.targets.wheel]
packages = ["resonate"]
